src/BusinessMotors/kubernetes/manifests/09-adminer-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adminer
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: adminer
  template:
    metadata:
      labels:
        app: adminer
    spec:
      containers:
        - name: adminer
          # Edit this image tag to match your local Docker image.
          image: adminer:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "128m"
            limits:
              memory: "512Mi"
              cpu: "256m"
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
