src/BusinessMotors/kubernetes/manifests/08-businessmotorsapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: businessmotorsapi
  namespace: development
spec:
  type: NodePort
  selector:
    app: businessmotorsapi
  ports:
    - port: 80
      targetPort: http
      nodePort: 30080
      name: http
