src/BusinessMotors/kubernetes/manifests/10-adminer-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: adminer
  namespace: development
spec:
  type: NodePort
  selector:
    app: adminer
  ports:
    - port: 8080
      targetPort: http
      nodePort: 30081
      name: http
